fix:1.class and package path;WC and TM bugs 2.RMI调用方式 我用Naming.rebind会报错(不知道为什么) 所以改成了LocateRegistry.getRegistry 3.,目前测了Start - QueryforDataAdd的部分

--- a/DDB-Project2023/DDB-Project2023/DDB-Project2021/SourceCode/transaction/Makefile
+++ b/DDB-Project2023/DDB-Project2023/DDB-Project2021/SourceCode/transaction/Makefile
@@ -1,6 +1,8 @@
 RMIREGPORT =3345 
 PROJECTROOT = ..
-PATH = /usr/bin
+# RM and PATH are your os's Environment path 
+# PATH = /usr/bin
+# RM = /bin/rm
 all : server client
 
 server : ResourceManager.class \
@@ -43,6 +45,7 @@ runclient : client
 
 clean :
 	$(RM) *.class
+	$(RM) ./models/*.class
 
 %.class : %.java
 	$(PATH)/javac -classpath $(PROJECTROOT) $<
