--- a/DDB-Project2023/DDB-Project2023/DDB-Project2021/SourceCode/test/Makefile
+++ b/DDB-Project2023/DDB-Project2023/DDB-Project2021/SourceCode/test/Makefile
@@ -55,6 +55,7 @@ test :
 	java -classpath $(PROJECTROOT) -DrmiPort=$(RMIREGPORT) -DtestName=Isolation test.RunTest
 	java -classpath $(PROJECTROOT) -DrmiPort=$(RMIREGPORT) -DtestName=Durability test.RunTest
 
+#A single Test:
 QueryforDataAddtest :
 	java -classpath $(PROJECTROOT) -DrmiPort=$(RMIREGPORT) -DtestName=QueryforDataAdd test.RunTest
 
